# TimLab

./: CMakeLists.txt  README.md  build_and_run.sh  build_and_test.sh  valgrind_parser.py
src/: main.cpp
src/calculator/: calc_exception.cpp  calc_exception.h  calc_variable.h  calculator.cpp  calculator.h  exception.cpp  exception.h  expressions.cpp  expressions.h  functions.cpp  functions.h  numbers_exception.cpp  numbers_exception.h  template_functions.cpp  template_functions.h  tokenize.cpp  tokenize.h
test/: CMakeLists.txt
test/tokenize/: tokenize_test.cpp
